Fixed nav-collapse

--- a/src/app/cockpit/cockpit.component.css
+++ b/src/app/cockpit/cockpit.component.css
@@ -1,3 +1,10 @@
 a {
   cursor: pointer;
 }
+
+/* Medium devices (tablets, less than 992px) */
+@media (max-width: 991.98px) { 
+  .form-inline {
+    display: block;
+  }
+}
